# InfiniteLineMobile

./: CMakeLists.txt  LICENSE.txt  NOTICE.txt  OFL.txt  README.md  licence.txt
backup/: game.cpp  game.hpp  main.cpp
imgs/: temp
include/: game.hpp  test.hpp
src/: game.cpp  main.cpp  main.cxx
